# mlops-product-classification2

./: .flake8  .gitignore  .railwayignore  API_REQUEST_FORMAT.md  AWS_DEPLOYMENT_CHECKLIST.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_QUICK_START.md  BATCH_PREDICTION_EXAMPLE.md  CORRECT_BATCH_COMMAND.txt  CORRECT_CURL_COMMANDS.md  CREATE_GITHUB_REPO.md  DEPLOYMENT_SUMMARY.md  DESIGN_PATTERNS.md  DESIGN_PATTERNS_IMPLEMENTATION.md  Dockerfile  ENGINEER_ROLES_AND_OUTPUTS.md  EXAMPLE_OUTPUT.txt  EXPECTED_OUTPUTS.md  FIXES_APPLIED.md  FIX_API_NOT_RUNNING.md  FIX_BATCH_422_ERROR.md  FIX_DIRECTORY_ISSUE.md  FIX_MODULE_NOT_FOUND.md  GITHUB_PUSH_GUIDE.md  HOW_TO_TEST_API.md  HOW_TO_VERIFY.md  IDE_FIXES.md  INDIVIDUAL_REPORT_BACKEND_ENGINEER.md  INSTALL_AWS_CLI.md  INSTALL_FIX.md  INSTALL_INSTRUCTIONS.md  KILL_PORT_8000.ps1  MANDATORY_REQUIREMENTS_CHECKLIST.md  MLFLOW_SETUP_GUIDE.md  PROJECT_CREATION_STEPS.md  PROJECT_EXPLANATION_SIMPLE.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_DEPLOY.md  (+39 more)
aws/: AWS_DEPLOYMENT.md  ecs-api-task-definition.json  ecs-mlflow-task-definition.json
configs/: ci.yaml  default.yaml
docker/: Dockerfile.inference  docker-compose.yml
mlflow/: Dockerfile  docker-compose.yml  mlflow_config.yml
scripts/: add-aws-to-path.ps1  check_environment.py  deploy.sh  deploy_railway.ps1  deploy_railway.sh  extract_model_from_mlflow.py  generate_sample_data.py  run_all.ps1  run_training.sh  setup_venv.ps1  start_api.ps1  start_api_simple.ps1  start_mlflow.ps1  start_mlflow.sh  start_mlflow_filebased.ps1  start_mlflow_simple.ps1  verify_mlflow.py
(+39 files in other folders)
