[tool]
name = "mlops-product-classification"
version = "0.1.0"
description = "A machine learning operations project for product classification."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.0"
lightgbm = "^4.0.0"
mlflow = "^2.8.0"
prefect = "^2.14.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pytest = "^6.2.0"
pyyaml = "^6.0.0"
joblib = "^1.3.0"
category-encoders = "^2.6.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^21.0.0"
isort = "^5.0.0"
pytest = "^6.2.0"
pytest-cov = "^4.1.0"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/venv"]
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.isort]
profile = "black"
line_length = 88
